Finished but no search bar working

--- a/Assessment1Notes/Assessment1Notes/VIEW/STORYBOARDS/Base.lproj/Main.storyboard
+++ b/Assessment1Notes/Assessment1Notes/VIEW/STORYBOARDS/Base.lproj/Main.storyboard
@@ -18,9 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="qXQ-ya-j95">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" red="0.2233609308" green="0.43829314720000001" blue="0.0084287143689999993" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="noteCell" textLabel="eyM-Ml-hc9" detailTextLabel="gtl-Fh-WcH" style="IBUITableViewCellStyleSubtitle" id="khR-c8-TBd">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="khR-c8-TBd" id="Oyi-Uw-Xo0">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -66,6 +72,9 @@
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="noteSearchBar" destination="qXQ-ya-j95" id="EcX-qd-zNs"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g2S-e6-mZM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
